# ds_traffic_cyclist1

./: .env  .gitignore  .render.yaml  README.md  docker-compose.yaml  pyproject.toml  render.yaml
app/: Dockerfile  classes.py  conclusion.py  eda_retro.py  fastapi_app.py  mlflow_model_loader.py  model_registry_summary.py  model_retro.py  opti_retro.py  streamlit_app.py  train.py
backend/classmodel/: .env  Dockerfile
backend/classmodel/app/: main.py
backend/cloud_run/: Dockerfile  requirements.txt
backend/cloud_run/app/: app_config.py  main.py
backend/regmodel/: Dockerfile  requirements.txt
backend/regmodel/app/: fastapi_app.py  model_registry_summary.py
backend/render/: pyproject.toml
backend/render/app/: fastapi_app.py
cloud_function/: Dockerfile  main.py  requirements.txt
cloud_function/app/: classes.py  model_registry_summary.py
cloud_run/: .env
cloud_run/app/: classes.py  custom_model_registry_summary.py  main.py
docs/: architecture.md  backend.md  cloudfunction.md  cloudrun.md
models/: .gitattributes
notebooks/: EDA_arthur.ipynb
scripts/: extract_csv.py
src/: streamlit_app.py
train/: train.py
